--- a/settings.json
+++ b/settings.json
@@ -1,24 +1,24 @@
 {
 	"prefix": ".",
-	"botver": "11",
-	"namo": "LUC",
-	"ator": "BOT",
-	"fakereply": "HAIL 2 U",
-	"namaDocument": "HAIL 2 U",
-	"owner": "6289530298948",
-	"developer": "6289530298948", 
-	"ownername": "Siegrin",
-	"donasi": "0895602592430",
+	"botver": "12",
+	"namo": "Experience",
+	"ator": "Bot",
+	"fakereply": "Magic 👾",
+	"namaDocument": "Experience",
+	"owner": "6282160268332",
+	"developer": "6282160268332", 
+	"ownername": "David Bang Namanya",
+	"donasi": "082160268332",
 	"rekening": "0895602592430",
 	"mybio": "https://www.youtube.com/watch?v=HylG14qpQ1Q",
 	"trakteer": "bit.ly/3m5hgof",
 	"saweria": "bit.ly/3oVRGnx",
-	"ownerNumber": "6289530298948",
+	"ownerNumber": "6282160268332",
 	"myyoutube":"bit.ly/3s2UaT6",
 	"mytiktok":"bit.ly/3m5xwpi",
 	"mytwitter":"bit.ly/3yHNY4x",
 	"github": "bit.ly/3scVRNU",
-	"ownername": "SIEGRIN",
-	"fake": "Luc Bot"
+	"ownername": "David",
+	"fake": "Experience Bot"
 }
 
